# Bot_voice_to_voice_AI

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  example.env  handlers.py  loader.py  main.py  pyproject.toml  requirements.txt  settings.py
alembic/: env.py
alembic/versions/: ac891602c3c7_0001_init.py  fa4f9e2b7341_0001_init.py
database/: base.py  connector.py  models.py
handlers/: buttons.py  handlers.py
migrations/: env.py
migrations/versions/: 2fe1e3768132_0001.py  f77c438fb46d_0001.py
service/: amplitude.py  assistant.py  fsm.py  transcription.py  utils.py  vision.py
service/assistant/: assistant.py  assistantAnxiety.py  assistantValue.py  data_for_create_assistants.py
service/assistant/data_for_vectors/: anxiety.docx
service/chat/: base.py  factory.py  text.py  voice.py
