[tool.poetry]
name = "bot-voice-to-voice-ai"
version = "0.1.0"
description = ""
authors = ["Roman <roma.makhunov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.7.0"
pydantic-settings = "^2.3.1"
openai = "^1.31.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
