[tool.poetry]
name = "poetry install"
version = "3.11"
description = ""
authors = ["Roman <roma.makhunov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]

python = "3.11.9"
pydantic-settings = "^2.3.1"
aiogram = "^3.7.0"
openai = "^1.31.1"
sqlalchemy = "^2.0.30"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
